# wdlparse

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/: complex_example.wdl  hello_world.wdl  malformed.wdl  mermaid_example.py  missing_version.wdl
mermaid_docs/: README.md
python/tests/: test_wdlparse.py
python/wdlparse/: __init__.py
src/: commands.rs  info.rs  lib.rs  main.rs  mermaid.rs  metadata.rs
tests/: cli.rs
