[package]
name = "wdlparse"
version = "0.1.0"
edition = "2021"
description = "A command-line tool for parsing WDL (Workflow Description Language) files"
authors = ["Scott Chamberlain"]
license = "MIT"

[[bin]]
name = "wdlparse"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
wdl-grammar = "0.17"
anyhow = "1.0"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
