[package]
name = "wdlparse"
version = "0.1.1"
edition = "2021"
description = "A command-line tool for parsing WDL (Workflow Description Language) files"
authors = ["Scott Chamberlain"]
license = "MIT"

[lib]
name = "wdlparse"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wdlparse"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
wdl-grammar = "0.17"
anyhow = "1.0"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
pyo3 = { version = "0.26", features = ["extension-module"], optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"

[features]
default = []
python = ["pyo3"]
